# esp32-cam-websrv

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  VERSION  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  camera.c  camera.h  cfgman.c  cfgman.h  config.h  httpd.c  httpd.h  idf_component.yml  main.c  ping.c  ping.h  sclients.c  sclients.h  storage.c  storage.h  vbytes.c  vbytes.h  wifi.c  wifi.h
storage/: config.cfg  ov2640.htm  ov3660.htm  script.js  style.css
